# serde-validate

./: Cargo.toml  README.md
serde-validate/: Cargo.toml  README.md
serde-validate-macro/: Cargo.toml  README.md
serde-validate-macro/src/: lib.rs
serde-validate/src/: lib.rs
serde-validate/tests/: enum.rs  generic_enum.rs  generic_struct_named.rs  generic_struct_unnamed.rs  struct_named.rs  struct_unnamed.rs
